# Toolkit

./: .gitignore  CMakeLists.txt  Details.org  GNUmakefile  GNUmakefile.common  GNUmakefile.std  GNUmakefile.sub  README-less-modern.md  README.html  README.md  Readme.md  index.html  params.json  test_matrix_colvec_log.xml  test_matrix_log.xml  test_matrix_matrix_log.xml  test_matrix_threevec_log.xml  test_testing_log.xml  test_testing_log_log.xml  test_testing_suite_log.xml  test_testing_test_log.xml  test_utility_log.xml  toplevel.cc
bist/: GNUmakefile  Readme.md  bist-fun.cc  bist-fun.hh  bist-pkg.cc  bist-pkg.hh  bist.hh
bist++/: .gitignore  BistBist.cc  BistFun.cc  BistPkg.cc  BistPkg.hh  GNUmakefile  gcov.awk
bist-example/: .gitignore  GNUmakefile  bist-example.cc
bistbist/: GNUmakefile
inc/: .gitignore  CMakeLists.txt  Doxyfile  GNUmakefile  MAINPAGE.html  MAINPAGE.md  README.html  README.md  matrix.h  matrix.hh  matrix_colvec.h  matrix_colvec.hh  matrix_matrix.h  matrix_matrix.hh  matrix_quat.hh  matrix_threevec.h  matrix_threevec.hh  matrix_trivec.hh  orbit.hh  orbit_eqns.hh  simple.hh  simple_base.hh  simple_col.hh  simple_mat.hh  simple_quat.hh  simple_row.hh  testing.h  testing.hh  testing_fixture.hh  testing_log.h  testing_log.hh  testing_oops.h  testing_oops.hh  testing_suite.h  testing_suite.hh  testing_test.h  testing_test.hh  utility.h  utility.hh
inc/html/: MAINPAGE_8md_source.html  annotated.html  annotated.js  classFarsyte_1_1Matrix_1_1ColVec-members.html  classFarsyte_1_1Matrix_1_1ColVec.html  classFarsyte_1_1Matrix_1_1ColVec.js  classFarsyte_1_1Matrix_1_1ColVec__coll__graph.map  classFarsyte_1_1Matrix_1_1ColVec__coll__graph.md5  classFarsyte_1_1Matrix_1_1ColVec__inherit__graph.md5  classFarsyte_1_1Matrix_1_1ColVec_a9ce963b958d5f6da71c8436dab3b87f8_icgraph.map  classFarsyte_1_1Matrix_1_1ColVec_a9ce963b958d5f6da71c8436dab3b87f8_icgraph.md5  classFarsyte_1_1Matrix_1_1Matrix-members.html  classFarsyte_1_1Matrix_1_1Matrix.html  classFarsyte_1_1Matrix_1_1Matrix.js  classFarsyte_1_1Matrix_1_1Matrix_a363946a3156161962911c95cdd5edf06_icgraph.map  classFarsyte_1_1Matrix_1_1Matrix_a363946a3156161962911c95cdd5edf06_icgraph.md5  classFarsyte_1_1Matrix_1_1Matrix_a48df0f93a310d496a0cd3c0dad4ce268_icgraph.map  classFarsyte_1_1Matrix_1_1Matrix_a48df0f93a310d496a0cd3c0dad4ce268_icgraph.md5  classFarsyte_1_1Matrix_1_1Matrix_a7ee7f9f4781cec54c49140bcc3844e2b_icgraph.map  classFarsyte_1_1Matrix_1_1Matrix_a7ee7f9f4781cec54c49140bcc3844e2b_icgraph.md5  classFarsyte_1_1Matrix_1_1Matrix_a92ef16f3a98345b908ed6c8e5b1c652d_icgraph.map  classFarsyte_1_1Matrix_1_1Matrix_a92ef16f3a98345b908ed6c8e5b1c652d_icgraph.md5  classFarsyte_1_1Matrix_1_1Matrix_aa544710adacdf29ae9ebb6f19a4d7e89_icgraph.map  classFarsyte_1_1Matrix_1_1ThreeVec-members.html  (+132 more)
lib/: GNUmakefile  README.html  README.md  lib.mak
matrix/: GNUmakefile  matrix.cc  matrix.hh  matrix.mak
matrix-example/: .gitignore  GNUmakefile  matrix-example.cc
orbit/: Readme.md  orbit.mak
ref/: BistBist.bist  BistFun.bist  BistPkg.bist  bist-example.bist
simple/: CMakeLists.txt  simple.mak
stylesheets/: stylesheet.css
testing/: GNUmakefile  README.md  testing.mak
utility/: utility.mak
(+178 files in other folders)
